# test-publish-my-package

./: pyproject.toml
.github/workflows/: release.yml
src/test_publish_my_package/: __init__.py  random.py
