[project]
name = "test-publish-my-package"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "smitk85143", email = "smitk85143@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
