[project]
name = "test-publish-my-package"
version = "0.0.5"
description = "Add your description here"
authors = [
    { name = "smitk85143", email = "smitk85143@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
repository = "https://github.com/smitk85143/test-publish-my-package"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
